# egami

./: .travis.yml  CMakeLists.txt  README.md  _image_8hpp.html  _image_8hpp_source.html  _image_mono_8hpp.html  _image_mono_8hpp_source.html  _image_private_8hpp.html  _image_private_8hpp_source.html  annotated.html  classegami_1_1_image-members.html  classegami_1_1_image.html  classegami_1_1_image_mono-members.html  classegami_1_1_image_mono.html  classegami_1_1_image_private-members.html  classegami_1_1_image_private.html  classegami_1_1_image_template-members.html  classegami_1_1_image_template.html  classes.html  debug_8hpp.html  debug_8hpp_source.html  dir_644e041c3a6521da7b27eba0e4eb2b95.html  dir_7d7d356252cefbc0c441662699c02ff6.html  dir_a094892b17be858f66bf3446bbb755c7.html  dir_cd19ef84dd94c3dc52256a3990111993.html  doxy_egami.py  egami_8hpp.html  egami_8hpp_source.html  egami_build.html  egami_tutorial_read.html  egami_tutorial_write.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  license.txt  lutinParseSubFolders.txt  lutin_egami-sample.py  lutin_egami-test.py  (+11 more)
doc/: build.md  mainpage.md  read.md  write.md
egami/: Image.cpp  Image.h  Image.hpp  ImageMono.cpp  ImageMono.h  ImageMono.hpp  ImagePrivate.h  ImagePrivate.hpp  debug.cpp  debug.h  debug.hpp  egami.cpp  egami.h  egami.hegami.hpp  egami.hpp  wrapperBMP.cpp  wrapperBMP.h  wrapperBMP.hpp  wrapperEDF.cpp  wrapperEDF.h  wrapperEDF.hpp  wrapperJPG.cpp  wrapperJPG.hpp  wrapperJPG2000.cpp  wrapperJPG2000.hpp  wrapperPNG.cpp  wrapperPNG.h  wrapperPNG.hpp  wrapperSVG.cpp  wrapperSVG.h  wrapperSVG.hpp  wrapperTIFF.cpp  wrapperTIFF.hpp
sample/: read.cpp  write.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_19.js  (+67 more)
(+10 files in other folders)
